<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="7">
                <ImageView
                    android:id="@+id/abook_image"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_book_picture_default"
                    android:contentDescription="@string/book_image"
                    android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="6"
                        android:paddingLeft="16dp">
                        <TextView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:text="$"/>
                        <EditText
                            android:id="@+id/abook_price"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:background="@android:drawable/edit_text"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title_text"
                    android:padding="16dp"
                    android:textColor="#0b0b0b"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/abook_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/EnterTitle"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_author_text"
                    android:padding="16dp"
                    android:textColor="#0b0b0b"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/abook_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/EnterAuthor"
                    android:layout_marginLeft="16dp"/>
                </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_isbn_text"
                    android:padding="16dp"
                    android:textColor="#0b0b0b"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/abook_ISBN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/EnterISBN"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_genre_text"
                    android:padding="16dp"
                    android:textColor="#0b0b0b"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/abook_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/EnterGenre"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_synopsis_text"
                    android:padding="16dp"
                    android:textColor="#0b0b0b"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/abook_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/Description"
                    android:layout_marginLeft="16dp"/>
                <Button
                    android:id="@+id/submit_new_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_marginLeft="16dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>