<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.olegsagenadatrytwo.library.LogIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_in"
        android:id="@+id/signintext"
        android:gravity="center_horizontal"
        android:textStyle="bold|italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:inputType="textEmailAddress"
        android:background="@android:drawable/edit_text"
        android:id="@+id/usernameEmailfield"
        android:hint="@string/usernamefield"
        android:layout_below="@+id/signintext" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@android:drawable/edit_text"
        android:id="@+id/passwordfield"
        android:hint="@string/passwordfield"
        android:layout_below="@+id/usernameEmailfield"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/logButton"
        android:id="@+id/logButton"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#280ad4"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/passwordfield"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/remember_me"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logButton" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:id="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/create_account"
        android:id="@+id/registerbutton"
        android:textColor="#f10c0c"
        android:layout_below="@+id/view"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/labForgotPassword"
        android:id="@+id/labForgotPassword"
        android:clickable="true"
        android:textColor="#fb0303"
        android:textStyle="normal|bold|italic"
        android:layout_below="@+id/registerbutton"/>

</RelativeLayout>
