<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">
    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridlayoutregister"
        android:layout_margin="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nametext"
            android:id="@+id/nametext"
            android:textStyle="bold|italic"
            android:textColor="#090909"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_row="1"
            android:layout_columnSpan="2"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:id="@+id/topLinearlayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:inputType="textPersonName"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/firstnamefield"
                    android:id="@+id/firstnamefield"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/lastnamefield"
                    android:id="@+id/lastnamefield"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/emailtext"
            android:id="@+id/emailtext"
            android:textStyle="bold|italic"
            android:textColor="#090909"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@android:drawable/edit_text"
            android:hint="@string/emailtext"
            android:id="@+id/emailfield"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/chooseusernametext"
            android:id="@+id/chooseusernametext"
            android:textColor="#090909"
            android:textStyle="bold|italic"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernamefield"
            android:layout_row="5"
            android:layout_column="0"
            android:background="@android:drawable/edit_text"
            android:hint="@string/usernamefieldfromregister"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/passwordtext"
            android:id="@+id/passwordtext"
            android:textColor="#090909"
            android:textStyle="bold|italic"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:drawable/edit_text"
            android:hint="@string/passwordfield"
            android:id="@+id/passwordfield"
            android:layout_columnSpan="2"
            android:layout_row="7"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:drawable/edit_text"
            android:hint="@string/re_type_password"
            android:id="@+id/retypepasswordfield"
            android:layout_columnSpan="2"
            android:layout_row="8"
            android:layout_column="0" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/registerbutton"
            android:id="@+id/registerbutton"
            android:layout_columnSpan="2"
            android:layout_margin="25dp"
            android:textStyle="bold"
            android:textColor="#090909"
            android:background="#66FF00" />

    </GridLayout>
</ScrollView>