<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="7">
                <ImageView
                    android:id="@+id/book_image"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_book_picture_default"
                    android:contentDescription="@string/book_image"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/book_price"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Price"
                    android:layout_weight="6"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title_text"
                    android:padding="16dp"
                    android:textColor="#0b0b0b"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_author_text"
                    android:padding="16dp"
                    android:textColor="#0b0b0b"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_isbn_text"
                android:padding="16dp"
                android:textColor="#0b0b0b"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/book_ISBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_genre_text"
                android:padding="16dp"
                android:textColor="#0b0b0b"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/book_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_synopsis_text"
                android:padding="16dp"
                android:textColor="#0b0b0b"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/book_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>